--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@
  * user guide available at https://docs.gradle.org/2.14/userguide/tutorial_java_projects.html
  */
 
-// Apply the java plugin to add support for Groovy
+// Apply the plugin to add support for Groovy
 apply plugin: 'groovy'
 apply plugin: 'application'
 
