--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@
 apply plugin: 'groovy'
 apply plugin: 'application'
 
-defaultTasks 'clean', 'build', 'test', 'groovydoc', 'run'
+defaultTasks 'clean', 'getJars', 'build', 'test', 'groovydoc', 'run', 'runner'
 
 // In this section you declare where to find the dependencies of your project
 repositories {
@@ -22,15 +22,15 @@ repositories {
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile fileTree(dir: "$projectDir/src/main/libs", include: ['*.jar'])
-
+    compile fileTree(dir: "src/main/libs", include: ['*.jar'])
+	
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
     compile group: 'log4j', name:'log4j', version: '1.2.17'
 	// better put log4j.properties in the src/main/resources folders 
 
-    compile "org.codehaus.groovy:groovy-all:2.4.8"
-    runtime "org.codehaus.groovy:groovy-all:2.4.8"
+    compile "org.codehaus.groovy:groovy-all:2.4.9"
+    runtime "org.codehaus.groovy:groovy-all:2.4.9"
     runtime   "org.slf4j:slf4j-log4j12:1.7.21"
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
@@ -40,7 +40,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     
     // Spock Framework basic dependencies:
-    testCompile "org.codehaus.groovy:groovy-all:2.4.8"
+    testCompile "org.codehaus.groovy:groovy-all:2.4.9"
     // The version have to be compatible with Groovy:
     testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
  
@@ -54,54 +54,35 @@ dependencies {
     testRuntime "org.objenesis:objenesis:2.1"
 }
 
-mainClassName = "net.jnorthr.support.Walker"
+mainClassName = "io.jnorthr.toolkit.Walker"
 
-task say << {
+task getJars { 
+  def destDir = "$projectDir/src/main/libs" //  Adds/encapsulates a dynamic property within task for O-O
+  doFirst { 
+    copy { 
+      from '../Tools/build/libs'
+      from '../CRUD/build/libs'
+      from '../Chooser/build/libs'
+      into destDir 
+	} 
+  } 
+}
+
+task say
+say.doLast{
 	println "$projectDir=["+projectDir+"]"
 }
 
 
 // runs our main() method; first arg points to a local folder / path name
 task(runner, dependsOn: 'classes', type: JavaExec) {
-	main = 'net.jnorthr.support.Walker'
+	main = 'io.jnorthr.toolkit.Walker'
 	classpath = sourceSets.main.runtimeClasspath
 	args '/Users/jimnorthrop/Dropbox/Projects/FileWalker/src', ~/^.*\.properties$/
 	systemProperty 'simple.message', 'Hi kids '
 }
 
-// runs the Chooser main() method; args are ignored but maybe later ?
-task(runChooser, dependsOn: 'classes', type: JavaExec) {
-	main = 'net.jnorthr.support.Chooser'
-	classpath = sourceSets.main.runtimeClasspath
-	args 'jimbo', 'hi kids'
-	systemProperty 'simple.message', 'Hi kids '
-}
-
-// runs the Image Picker main() method; args are ignored but maybe later ?
-// only allows choice of .png .gif .jpg image files
-task(runPicker, dependsOn: 'classes', type: JavaExec) {
-	main = 'net.jnorthr.support.Picker'
-	classpath = sourceSets.main.runtimeClasspath
-	args 'jimbo', 'hi kids'
-	systemProperty 'simple.message', 'Hi kids '
-}
-
-// runs the Saverer main() method; args are ignored but maybe later ?
-task(runSaver, dependsOn: 'classes', type: JavaExec) {
-	main = 'net.jnorthr.support.Saver'
-	classpath = sourceSets.main.runtimeClasspath
-	args 'jimbo', 'hi kids'
-	systemProperty 'simple.message', 'Hi kids '
-}
-
-// runs the main() method; args are ignored but maybe later ?
-task(runResponse, dependsOn: 'classes', type: JavaExec) {
-	main = 'net.jnorthr.support.Response'
-	classpath = sourceSets.main.runtimeClasspath
-	args 'jimbo', 'hi kids'
-	systemProperty 'simple.message', 'Hi kids '
-}
-
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.3'
+    gradleVersion = '3.4'
 }
+
