--- a/build.gradle
+++ b/build.gradle
@@ -17,41 +17,41 @@ defaultTasks 'clean', 'getJars', 'build', 'test', 'groovydoc', 'run', 'runner'
 repositories {
     // Use 'jcenter' for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 // In this section you declare the dependencies for your production and test code
 dependencies {
-    compile fileTree(dir: "src/main/libs", include: ['*.jar'])
+    implementation fileTree(dir: "src/main/libs", include: ['*.jar'])
 	
     // The production code uses the SLF4J logging API at compile time
-    compile 'org.slf4j:slf4j-api:1.7.21'
-    compile group: 'log4j', name:'log4j', version: '1.2.17'
+    implementation 'org.slf4j:slf4j-api:1.7.21'
+    implementation group: 'log4j', name:'log4j', version: '1.2.17'
 	// better put log4j.properties in the src/main/resources folders 
 
-    compile "org.codehaus.groovy:groovy-all:2.4.13"
-    runtime "org.codehaus.groovy:groovy-all:2.4.13"
-    runtime   "org.slf4j:slf4j-log4j12:1.7.21"
+    implementation "org.codehaus.groovy:groovy-all:3.0.8"
+    //runtimeOnly "org.codehaus.groovy:groovy-all:2.4.13"
+    runtimeOnly   "org.slf4j:slf4j-log4j12:1.7.21"
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.12'
     
     // Spock Framework basic dependencies:
-    testCompile "org.codehaus.groovy:groovy-all:2.4.13"
+    testImplementation "org.codehaus.groovy:groovy-all:3.0.8"
     // The version have to be compatible with Groovy:
-    testCompile "org.spockframework:spock-core:1.0-groovy-2.4"
+    testImplementation "org.spockframework:spock-core:1.0-groovy-2.4"
  
     // Optional dependencies Spock
     // To use Hamcrest matchers:
-    testCompile "org.hamcrest:hamcrest-core:1.3"
+    testImplementation "org.hamcrest:hamcrest-core:1.3"
  
     // To mock classes:
-    testRuntime "cglib:cglib-nodep:3.1"
+    testRuntimeOnly "cglib:cglib-nodep:3.1"
     // Use with cglib to mock classes without default constructor:
-    testRuntime "org.objenesis:objenesis:2.1"
+    testRuntimeOnly "org.objenesis:objenesis:2.1"
 }
 
 mainClassName = "io.jnorthr.toolkit.Walker"
@@ -76,13 +76,16 @@ say.doLast{
 
 // runs our main() method; first arg points to a local folder / path name
 task(runner, dependsOn: 'classes', type: JavaExec) {
-	main = 'io.fred.toolkit.Walker'
+	main = 'io.jnorthr.toolkit.Walker'
 	classpath = sourceSets.main.runtimeClasspath
-	args '/Users/fred/Dropbox/Projects/FileWalker/src', ~/^.*\.properties$/
+	args '/home/jnorthr/Dropbox/Projects/FileWalker/src', ~/^.*\.properties$/
 	systemProperty 'simple.message', 'Hi kids '
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+// runs our main() method; no arg test
+task(without, dependsOn: 'classes', type: JavaExec) {
+	main = 'io.jnorthr.toolkit.Walker'
+	classpath = sourceSets.main.runtimeClasspath
+	systemProperty 'simple.message', 'Hi kids '
 }
 
